tests/NormalTests/paczka1/small_fuzzy/97067300.err
Error in line 1: ZPCqvS A604 36,1
Error in line 4: A604 S148 99,0
Error in line 3: ZPCqvS S148 32,7
